# BiliHelper

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: analysis_tasks.py  auth.py  exports.py  llm_configs.py  qa.py  videos.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/integrations/asr/: __init__.py  base.py  faster_whisper_asr.py  openai_asr.py
backend/app/integrations/bilibili/: audio.py  metadata.py  resolver.py  subtitles.py
backend/app/integrations/llm/: __init__.py  base.py  openai_compatible.py
backend/app/models/: __init__.py  export.py  qa.py  summary.py  task.py  transcript.py  user.py  video.py
backend/app/prompts/: summary_chapters_v1.txt  video_summary_v1.txt
backend/app/repositories/: credential_repository.py  user_repository.py  video_repository.py
backend/app/schemas/: analysis.py  auth.py  credential.py  video.py
backend/app/services/: analysis_service.py  auth_service.py  credential_service.py  export_service.py  llm_factory.py  qa_service.py  transcript_service.py  video_service.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: analyze_part.py
backend/migrations/: env.py
backend/migrations/versions/: 2ddfb8aa9d1e_fix_cid改为biginteger.py  9855a20cc004_initial_all_tables.py  c278c20f44aa_fix_aid和owner_mid改为biginteger.py
doc/: BiliHelper_Product.md  BiliHelper_Technical_Design.md  code-review.md  plan.md  (+2 more)
(+39 files in other folders)
